<resources>
    <string name="app_name">회식이</string>
    <string name="login_activity_text">찾기 어려운 회식 장소를 식당 사장님들에게 직접 제의를 받으세요!</string>
    <string name="login_activity_button">구글 계정으로 시작하기</string>
    <string name="text_join_agree">입력하신 정보는 계약이 이루어졌을 때 식당에 제공될 수 있습니다.</string>
    <string name="text_phone">전화번호</string>
    <string name="text_name">이름</string>
    <string name="join_activity_title">회원 정보 입력</string>
    <string name="estimate_detail_activity_title">견적서 내용</string>
    <string name="contact_detail_activity_title">계약서 내용</string>
    <string name="text_i_agree">동의합니다.</string>
    <string name="text_join">회원가입</string>
    <string name="tab_title_application">신청서</string>
    <string name="tab_title_estimate">견적서</string>
    <string name="tab_title_contact">계약</string>
    <string name="text_title">제목</string>
    <string name="text_number">인원</string>
    <string name="text_time">시간</string>
    <string name="text_style">분위기</string>
    <string name="text_menu">메뉴</string>
    <string name="text_location">위치</string>
    <string name="text_apply_success">신청 완료</string>
    <string name="text_apply_canceled">취소됨</string>
    <string name="text_count_person">명</string>
    <string name="text_apply">신청</string>
    <string name="text_cancel">취소</string>
    <string name="text_rewrite">다시 작성</string>
    <string name="text_search">탐색</string>
    <string name="text_need_input">작성 필요</string>
    <string name="text_contact_list_title">%1$s님 - %2$s</string>
    <string name="text_contact_list_subtitle">신청 시간: %1$s\n계약 시간: %2$s</string>
    <string name="text_contact_apply_title">신청서 내용</string>
    <string name="text_contact_apply_detail">인원: %1$d\n\n고객 위치: %2$s\n\n신청 시간: %3$s\n\n고객 전화번호: %4$s</string>
    <string name="text_contact_estimate_title">견적서 내용</string>
    <string name="text_contact_estimate_detail">식당 위치: %1$s\n\n견적 시간: %2$s\n\n식당 전화번호: %3$s\n\n식당 메시지: %4$s</string>
    <string name="text_contact_contact_title">계약 내용</string>
    <string name="text_contact_contact_detail">계약 시간: %1$s</string>
    <string name="text_join_name_help">사장님들이 확인하기 쉽도록 실명을 사용해주세요!</string>
    <string name="text_join_phone_help">연락이 가능한 전화번호를 입력해주세요!</string>
    <string name="text_start_contact">계약하기</string>
    <string name="text_style_completion_hint">분위기를 선택해주세요</string>
    <string name="text_select_this">이곳으로 지정</string>
    <string name="text_no_address">주소 없음</string>
    <string name="dialog_alert_title">알림</string>
    <string name="dialog_apply_message">신청하면 취소는 가능하지만 수정이 불가능합니다. 이대로 신청하시겠습니까?</string>
    <string name="dialog_contact_message">계약시 1인당 1,000￦ 의 계약금이 발생합니다. 현재 견적서로 계약을 하시겠습니까?</string>
    <string name="dialog_cancel_message">신청서를 취소하면 내용이 모두 삭제 됩니다. 정말로 취소하시겠습니까?</string>
    <string name="drawer_open">메뉴 열림</string>
    <string name="drawer_close">메뉴 닫힘</string>
    <string name="snack_need_name">이름을 입력해주세요.</string>
    <string name="snack_need_phone">전화번호를 입력해주세요.</string>

    <string-array name="styles">
        <item>포차</item>
        <item>선술집</item>
        <item>바</item>
        <item>일반 식당</item>
        <item>고깃집</item>
        <item>카페</item>
        <item>호프</item>
        <item>옛날식</item>
        <item>음악</item>
        <item>조용함</item>
        <item>혼잡함</item>
        <item>룸식</item>
        <item>한적함</item>
    </string-array>

    <string name="kakao_app_key">cf6bb484f52252387132a157d7832fb0</string>
    <string name="facebook_app_id">1586397501435939</string>
    <string name="fb_login_protocol_scheme">fb1586397501435939</string>
    <string name="text_email">계정 이메일</string>
    <string name="menu_logout">로그아웃</string>
    <string name="email_sign_up_email_help">비밀번호를 잊었을 때 찾는 용도로 사용합니다.</string>
    <string name="email_sign_up_email">이메일</string>
    <string name="email_sign_up_password">비밀번호</string>
    <string name="email_sign_up_password_help">비밀번호는 8자리 이상입니다.</string>
    <string name="email_sign_up_password_confirm">비밀번호 확인</string>
    <string name="email_sign_up_password_confirm_help">동일한 비밀번호를 한번더 입력해주세요.</string>
    <string name="text_prev">이전</string>
    <string name="text_next">다음</string>
</resources>
