<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/fontGraphic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/login_activity_text"
            android:textColor="@color/white"
            android:textSize="@dimen/fontLargest"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_activity_button"/>
    </LinearLayout>

    <com.kakao.usermgmt.LoginButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
