<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.boostcamp.staffdinner.ui.activity.EstimateDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/linear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/ic_restaurant_yellow_24dp"/>

                        <TextView
                            android:id="@+id/text_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/fontNormal"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/text_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/fontSmall" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_message"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/shape_message"
                        android:padding="8dp"
                        android:gravity="start|top"
                        android:textSize="@dimen/fontNormal"
                        app:layout_constraintTop_toBottomOf="@id/linear"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <android.support.constraint.Guideline
                        android:id="@+id/guide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.3"/>

                    <TextView
                        android:id="@+id/text_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:textSize="@dimen/fontSmall"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/text_message"
                        app:layout_constraintLeft_toRightOf="@id/guide"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/text_style"
                        android:textSize="@dimen/fontSmall"
                        android:textColor="@color/black"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="@id/text_style"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/guide"/>

                    <TextView
                        android:id="@+id/text_menu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:textSize="@dimen/fontSmall"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/text_style"
                        app:layout_constraintLeft_toRightOf="@id/guide"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/text_menu"
                        android:textSize="@dimen/fontSmall"
                        android:textColor="@color/black"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="@id/text_menu"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/guide"/>

                    <TextView
                        android:id="@+id/text_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:textSize="@dimen/fontSmall"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/text_menu"
                        app:layout_constraintLeft_toRightOf="@id/guide"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/text_location"
                        android:textSize="@dimen/fontSmall"
                        android:textColor="@color/black"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="@id/text_location"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/guide"/>
                </android.support.constraint.ConstraintLayout>

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/button_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_start_contact"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
